    may be enough to completely change the execution of simulations in
    some cases. Sorry for the inconvenience.

 GRAS:
  * Convert the PIDs from long int to int to match the MSG ones (and
    linux ones too) [Mt]
  * New function: gras_agent_spawn() to launch a new process on
    current host. Only working in simulation for now.. [Mt]

 XBT:
  * Make the backtrace of exceptions more human readable [Mt]
  * New module: xbt/str [Mt]
    a ton of string utility functions (split, join, printf to a newly
    allocated buffer, trim, etc)
  * New module: xbt/synchro [Mt]
    synchronization tools (mutex and conditions) working the same way
    in simulation and in real life (mainly useful for GRAS, but not
    only).
  * New module: xbt/queue [Mt]
    classical producer/consumer synchronization scheme

 -- 

SimGrid (3.2) unstable; urgency=low

  OVERALL CHANGES:
   * Port to windows.
     We still experience issues on this platform, but we belive that at
     least MSG is usable.

  GRAS API BREAKAGE (for simplification purpose, sorry):
   * the gras_msgtype_by_name is not used anymore. Instead of 
       gras_msg_send(toserver, gras_msgtype_by_name("request"), &request);
     you can write (and must)
       gras_msg_send(toserver, "request", &request);
   - If you still want to pass a gras_msgtype_t to the function (to cache
     the type and avoid the lookup time), use the gras_msg_send_() variant.
   - Impacted functions:
     gras_cb_register, gras_cb_unregister, gras_msg_send, gras_msg_wait,
     gras_msg_rpccall, gras_msg_rpc_async_call, gras_msg_wait_ext
   * The callbacks are now expected to return 0 when everything went well
     (just like the main() function)

  GRAS new features and improvements:
  * New module mecanism where user code can use per process globals [Mt]
    This is similar to gras_userdata_*() functions, but for libraries. It
      factorize some code developped over and over in the examples and AMOK.